Fix margin issues for social links on mobile

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -31,6 +31,7 @@ $social-link-background-hover-color: rgba(0, 0, 0, 0.5);
     @media (max-width: 800px) {
       float: left;
       font-size: 2em;
+      margin-left: 0;
       margin-top: 3vh;
     }
   }
